--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .Nav{
+  margin-top: 0%;
+  
+  background-color: black;
+  color: aliceblue;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 40px;
+
+} */
+
+
+.c1{
+/* 
+  display: flex;  
+  justify-content: space-around; */
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(2,1fr) ;
+ 
+
+}
+.imgl{
+  width: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.footer{
+  margin-top: 43%;
+  background-color: black;
+  color: aliceblue;
+  display: flex;
+  justify-content: space-around;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
