--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* .Nav{
+.Nav{
   margin-top: 0%;
   
   background-color: black;
@@ -8,7 +8,7 @@
   align-items: center;
   height: 40px;
 
-} */
+}
 
 
 .c1{
